# Svan_m2_voice_interaction_backup

./: .gitignore
Svan_project1/robonex_ai/: CMakeLists.txt  JoyData.cpp  JoyData.hpp  JoyData.idl  api.py  brain.py  config.py  cyclonedds_python_setup.sh  dds_publisher.py  grokrules.py  llamarules.py  main.py  microphone.py  subscriber.cpp
Svan_project1/robonex_ai/cyclonedds_install/include/dds/: config.h  features.h  version.h
Svan_project1/robonex_ai/cyclonedds_install/include/idl/: version.h
Svan_project1/robonex_ai/cyclonedds_install/lib/: libcycloneddsidl.so.11  libcycloneddsidl.so.11.0.1  libcycloneddsidlc.so.11  libcycloneddsidlc.so.11.0.1  libcycloneddsidlcxx.so.11  libcycloneddsidlcxx.so.11.0.1  libddsc.so.11  libddscxx.so.11  libddscxx.so.11.0.1
Svan_project1/robonex_ai/cyclonedds_install/lib/cmake/CycloneDDS/: CycloneDDSConfigVersion.cmake  CycloneDDSTargets-relwithdebinfo.cmake  CycloneDDSTargets.cmake
Svan_project1/robonex_ai/cyclonedds_install/lib/cmake/CycloneDDS-CXX/: CycloneDDS-CXXTargets-release.cmake  CycloneDDS-CXXTargets.cmake
Svan_project1/robonex_ai/cyclonedds_install/lib/pkgconfig/: CycloneDDS.pc
backup/: brain.py  brainLama.py  grokrule.py  history.py  lamapublisher.py  microphone.py  ollamarules.py  rulesgroq.py  subscriber.cpp
